--- a/front end/src/Component/NewsFeed/NewsFeed.css
+++ b/front end/src/Component/NewsFeed/NewsFeed.css
@@ -15,6 +15,13 @@
     margin-bottom: 20px;
     color: #333;
   }
+
+  .post-list{
+    list-style: none;
+    padding: 0;
+    width: auto;
+    overflow: auto;
+  }
   
   .post {
     list-style: none;
