--- a/front end/src/Component/NewsFeed/NewsFeed.css
+++ b/front end/src/Component/NewsFeed/NewsFeed.css
@@ -3,10 +3,15 @@
 .newsfeed-container {
     max-width: 800px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 5px;
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    height: 600px;
+    overflow: hidden;
+    margin-bottom: 5px;
+    border: 1px solid black;
+    overflow: auto;
     
   }
   
@@ -20,7 +25,7 @@
     list-style: none;
     padding: 0;
     width: auto;
-    overflow: auto;
+    height: 10%;
   }
   
   .post {
@@ -91,4 +96,26 @@
 
 .post button.share:hover {
   background-color: #e0a800;
+}
+
+.homepage{
+  display: grid;
+  grid-template-columns: 3fr 4fr 3fr;
+  overflow: hidden;
+  height: 100%;
+  width: auto;
+}
+
+/* -------------------user-list------------------ */
+.users-list {
+  height: 600px;
+  width: 40%;
+  box-shadow: rgba(23, 127, 230, 0.2) 0px 8px 24px;
+  border: 1px solid black;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 5px;
+  overflow: auto;
+  
+
 }
