--- a/front end/src/Component/Posts/CreatePost.css
+++ b/front end/src/Component/Posts/CreatePost.css
@@ -26,7 +26,7 @@
   border-radius: 100px;
   font-family: Arial, sans-serif;
   font-size: larger;
-  text-align: center;
+  box-sizing: border-box;
 }
 
 
