--- a/front end/src/Pages/Home.css
+++ b/front end/src/Pages/Home.css
@@ -216,3 +216,33 @@
   text-align: center;
   padding: 10px;
 }
+
+/* -------------------------- comment list ---------------- */
+
+
+.commentList li{
+  list-style: none;
+  margin: 5px;
+  border: 1px solid black;
+  border-radius: 20px;
+  width: auto;
+  max-width: 40%;
+  padding: 2px 10px;
+  
+
+}
+
+.commentList .userimg img{
+  height: 30px;
+  width: 30px;
+
+}
+
+.eachcomment{
+  display: flex;
+  align-items: center;
+}
+
+.eachcomment p{
+  padding-left: 20px ;
+}
