--- a/front end/src/Component/Auther/logincss.css
+++ b/front end/src/Component/Auther/logincss.css
@@ -1,21 +1,48 @@
 /* Global styles */
   
   /* Form container */
-  .login-form {
+  .loginpage {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    align-items: end;
+    justify-content: center;
+    background-color: aliceblue;
+  }
+
+  .login-form{
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(4, 4, 4, 0.486);
     width: 100%;
     max-width: 400px;
     box-sizing: border-box;
-  }
-  
-  /* Form group */
-  .form-group {
     margin-bottom: 20px;
+    margin-right: 60px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .userlogo {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .userlogo img {
+    width: 100px;
+    height: 100px;
+
   }
   
+  .loginbox{
+    padding: 20px;
+    border-radius: 20px;
+  }
+
   /* Form labels */
   label {
     display: block;
@@ -28,27 +55,39 @@
   input[type="password"] {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #7474fb;
     border-radius: 4px;
     box-sizing: border-box;
     font-size: 16px;
+  }
+
+  .changebutton {
+    width: 100%;
+    display: flex;
   }
   
   /* Submit button */
   .login-button {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #41c726;
     color: white;
     border: none;
     border-radius: 4px;
     font-size: 16px;
+    text-align: center;
+    text-decoration: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
   
   .login-button:hover {
-    background-color: #0056b3;
+    background-color: #36a420;
+  }
+
+  .login-button Link {
+    text-decoration: none;
+    color: white
   }
   
   /* Responsive design */
