Update login page

--- a/front end/src/Component/Auther/logincss.css
+++ b/front end/src/Component/Auther/logincss.css
@@ -52,7 +52,8 @@
   
   /* Form inputs */
   input[type="email"],
-  input[type="password"] {
+  input[type="password"],
+  input[type="text"] {
     width: 100%;
     padding: 10px;
     border: 1px solid #7474fb;
